commit 18.4.2018 - commit farbicky

--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Graph2d_partial.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/Graph2d_partial.cshtml
@@ -39,6 +39,7 @@
                 },
                 data: [
                     {
+                        color:"#F9A89C",
                         type: "column",
                         name: "Liaison",
                         showInLegend: true,
@@ -46,6 +47,7 @@
                         dataPoints: @Html.Raw(Json.Encode(Model.DataPointDto.DataPointsLiaison))
                     },
                     {
+                        color: "#F39A9B",
                         type: "column",
                         name: "Coordinator",
                         showInLegend: true,
@@ -53,6 +55,7 @@
                         dataPoints: @Html.Raw(Json.Encode(Model.DataPointDto.DataPointsCoordinator))
                     },
                     {
+                        color: "#EC6E8D",
                         type: "column",
                         name: "Gatepeeker",
                         showInLegend: true,
@@ -60,6 +63,7 @@
                         dataPoints: @Html.Raw(Json.Encode(Model.DataPointDto.DataPointsGatepeeker))
                     },
                     {
+                        color: "#D74A88",
                         type: "column",
                         name: "Representative",
                         showInLegend: true,
@@ -67,6 +71,7 @@
                         dataPoints: @Html.Raw(Json.Encode(Model.DataPointDto.DataPointsRepresentative))
                     },
                     {
+                        color: "#A93790",
                         type: "column",
                         name: "Itinerant",
                         showInLegend: true,
@@ -74,6 +79,7 @@
                         dataPoints: @Html.Raw(Json.Encode(Model.DataPointDto.DataPointsItinerant))
                     },
                     {
+                        color: "#7B2397",
                         type: "column",
                         name: "Total brokerage score",
                         showInLegend: true,
