commit 20.4. kolacovy graf + zaciatok statistik

--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -317,6 +317,9 @@ h1, h2, h3, h4, h5, h6, p {
     left: 10px;
     cursor: pointer; }
 
+.daterangepicker.dropdown-menu.ltr.show-calendar.opensright {
+  top: 100px !important; }
+
 .datepicker-dropdown {
   top: 712px;
   left: 576.5px;
@@ -324,7 +327,7 @@ h1, h2, h3, h4, h5, h6, p {
   display: block; }
 
 .datepicker-input {
-  width: 495px;
+  width: 100%;
   padding-left: 30px;
   margin-bottom: 15px; }
 
@@ -414,4 +417,8 @@ h1, h2, h3, h4, h5, h6, p {
   text-align: center;
   width: 100%;
   padding: 20px; }
+
+.pie-chart-container {
+  width: 100px;
+  height: 100px; }
 
