--- a/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
+++ b/Thesis/Thesis.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <script src="~/Scripts/daterangepicker.js"></script>
     <script src="~/Scripts/custom.js"></script>
     <script src="~/Scripts/toastr.js"></script>
-   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <script src="~/Scripts/canvasjs.js"></script>
 </head>
 <body>
     <nav>
