--- a/Thesis/Thesis.Web/Content/custom.scss
+++ b/Thesis/Thesis.Web/Content/custom.scss
@@ -456,6 +456,7 @@ h1, h2, h3, h4, h5, h6, p {
     position: relative;
     width: 100%;
     height: 600px;
+    margin-top: 15px;
 }
 
 .loading-bar-text {
@@ -515,6 +516,14 @@ h1, h2, h3, h4, h5, h6, p {
 
 .container-brokerage {
     padding-top: 30px;
+}
+
+.container-statistics {
+    padding-top: 15px;
+}
+
+.table th, .table td {
+    color: #721549;
 }
 
 .top-ten-brokerage-label {
