--- a/Thesis/Thesis.Web/Content/custom.css
+++ b/Thesis/Thesis.Web/Content/custom.css
@@ -81,8 +81,13 @@ body {
     .container-download .btn:hover {
       background: #cacaca; }
 
-.container-canvas .canvas {
-  position: relative; }
+.container-canvas {
+  padding-bottom: 30px; }
+  .container-canvas .canvas {
+    position: relative; }
+
+.container-buttons {
+  margin-bottom: 30px; }
 
 .container-contacts {
   padding-left: 20%;
@@ -415,6 +420,9 @@ h1, h2, h3, h4, h5, h6, p {
 .container-statistics {
   padding-top: 15px; }
 
+.container-communities {
+  padding-top: 15px; }
+
 .table th, .table td {
   color: #721549; }
 
@@ -422,8 +430,7 @@ h1, h2, h3, h4, h5, h6, p {
   color: #721549;
   font-size: 18px;
   text-align: center;
-  width: 100%;
-  padding: 20px; }
+  width: 100%; }
 
 .pie-chart-container {
   width: 100px;
