--- a/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/NetworkStatistics_partial.cshtml
+++ b/Thesis/Thesis.Web/Views/TeamMembersEmailGraphs/NetworkStatistics_partial.cshtml
@@ -5,6 +5,8 @@
 
 
 <div class="row">
+    <label class="top-ten-brokerage-label">STATISTICS</label>
+
     <div class="col-md-12">
         <div class="container-statistics">
             <table class="table table-hover table-striped">
@@ -21,10 +23,10 @@
                     <th>NUMBER OF USERS</th>
                     <td>@Model.NetworkStatisticsDto.NumberOfUsers</td>
                 </tr>
-                    <tr>
-                        <th>BIGGEST EMAIL SENDER</th>
-                        <td>@Model.NetworkStatisticsDto.BiggestEmailSender</td>
-                    </tr>
+                <tr>
+                    <th>BIGGEST EMAIL SENDER</th>
+                    <td>@Model.NetworkStatisticsDto.BiggestEmailSender</td>
+                </tr>
                 <tr>
                     <th>MOST EMAILS IN CONVERSATION</th>
                     <td>@Model.NetworkStatisticsDto.TheBiggestNumberOfEmailsInConversation</td>
