commit 22.4. textova cast

--- a/Thesis/Thesis.Web/Views/Home/Contact.cshtml
+++ b/Thesis/Thesis.Web/Views/Home/Contact.cshtml
@@ -11,11 +11,12 @@
             <div class="col">
                 <address>
                     <strong>Author:</strong> Veronika Uhrova<br />
+                    <strong>Login:</strong>UHR0019<br />
                 </address>
             </div>
             <div class="col">
                 <address>
-                    <strong>Support:</strong> <a href="mailto:uhr0019@vsb.cz">Support@example.com</a><br />
+                    <strong>Support:</strong> <a href="mailto:uhr0019@vsb.cz">UHR0019@vsb.cz</a><br />
                 </address>
             </div>
         </div>
